--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "license": "MIT",
     "dependencies": {
         "@flexilla/dropdown": "^2.0.5",
+        "@floating-ui/dom": "^1.6.13",
+        "@preline/select": "^3.0.0",
         "@tailus/themer": "^0.1.8",
-        "swiper": "^11.0.6"
+        "preline": "^3.0.0",
+        "swiper": "^11.0.6",
+        "vanilla-calendar-pro": "^3.0.3"
     }
 }
